cloudbite-chart/templates/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:8.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-data 
              mountPath: /data/db
      volumes:
        - name: mongodb-data 
          persistentVolumeClaim: 
            claimName: mongodb-pvc
