cloudbite-chart/templates/backend-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: backend-service 
  labels: 
    app: backend 
    env: dev 
spec: 
  selector: 
    app: backend 
    env: dev 
  ports: 
    - protocol: TCP 
      port: 4000 
      targetPort: 4000
