cloudbite-chart/templates/frontend-service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: frontend-service 
  labels: 
    app: frontend 
    env: dev 
spec: 
  ports: 
    - port: 80
      targetPort: 80
      protocol: TCP
  selector: 
    app: frontend 
    env: dev
