cloudbite-chart/templates/mongodb-service.yaml
apiVersion: v1 
kind: Service
metadata: 
  name: mongodb-service 
  labels:
    app: mongodb
spec: 
  selector: 
    app: mongodb
  ports: 
    - protocol: TCP
      port: 27017
      targetPort: 27017
